legacy/test/util/test_case/tree_file/valid/.tree
children:
- children: null
  metadata: null
  mtime: null
  name: .tree
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: valid_tree.tree
  size: null
  type: file
metadata: null
mtime: null
name: valid
size: null
type: directory
