legacy/test/util/test_case/tree_file/invalid/.tree
children:
- children: null
  metadata: null
  mtime: null
  name: .tree
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_invalid_metadata.tree
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_missing_metadata.tree
  size: null
  type: file
- children: null
  metadata: null
  mtime: null
  name: invalid_tree.tree
  size: null
  type: file
metadata: null
mtime: null
name: invalid
size: null
type: directory
